--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "gl-react": "^4.0.1",
+    "gl-react-dom": "^4.0.1",
+    "glslify-loader": "^2.0.0",
+    "raw-loader": "^4.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1",
@@ -35,5 +39,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/gl-react": "^3.15.2",
+    "@types/gl-react-dom": "^3.15.3",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2"
   }
 }
