--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "stats.js": "^0.17.0",
     "style-loader": "1.1.3",
     "terser-webpack-plugin": "2.3.4",
+    "three": "^0.113.2",
     "ts-pnp": "1.1.5",
     "typescript": "~3.7.2",
     "url-loader": "2.3.0",
